# DriftEdge

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
docs/decisions/: 0001-record-architecture-decisions.md  0002-kalshi-as-m1-source.md  0003-price-is-not-probability.md  0004-no-lookahead-bias.md
docs/research/: architecture.md  data_sources.md  papers.md
scripts/: driftedge-poll.sh
scripts/launchd/: com.tanishk.driftedge.poll.plist  install.sh  uninstall.sh
src/driftedge/: __init__.py  categorize.py  classifier.py  cli.py  config.py  exit_rules.py  kuber.py  obs.py  paper.py  sizing.py
src/driftedge/agents/: __init__.py  kuber.py  resolution.py  volharvest.py
src/driftedge/data/: __init__.py  equity_persist.py  kalshi.py  news.py  normalize.py  paper_persist.py  persistence.py  polymarket.py  state_persist.py
src/driftedge/flow/: __init__.py
src/driftedge/path/: __init__.py
src/driftedge/sizing/: __init__.py
tests/: test_classifier_cache.py  test_critical_fixes.py  test_held_augmentation.py  test_kuber.py  test_paper_no_lookahead.py  test_volharvest_orphan_exit.py
