[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftedge"
version = "0.0.1"
description = "Open research platform for prediction markets: probability-path inference, flow-anomaly detection, Kelly-sized path trades."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tanishk Yadav" }]
license = { text = "MIT" }
keywords = ["prediction-markets", "polymarket", "kalshi", "kelly", "quant", "research"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "websockets>=12",
    "rich>=13.7",
    "vaderSentiment>=3.3.2",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6",
]
analysis = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict_optional = true
ignore_missing_imports = true
